--- a/package.json
+++ b/package.json
@@ -12,13 +12,15 @@
     "@ai-sdk/google": "^0.0.55",
     "@ai-sdk/openai": "^0.0.72",
     "ai": "^3.4.33",
+    "axios": "^1.7.7",
     "next": "15.0.3",
-    "react": "19.0.0-rc-66855b96-20241106",
-    "react-dom": "19.0.0-rc-66855b96-20241106",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-markdown": "^9.0.1",
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@types/axios": "^0.9.36",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
