--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
     "test": "vitest"
   },
   "dependencies": {
-    "@ai-sdk/google": "^0.0.55",
-    "@ai-sdk/openai": "^0.0.72",
-    "ai": "^3.4.33",
+    "@ai-sdk/deepseek": "^0.1.10",
+    "@ai-sdk/google": "^1.1.14",
+    "@ai-sdk/openai": "^1.1.12",
+    "ai": "^4.1.41",
     "axios": "^1.7.7",
     "next": "15.0.3",
     "react": "^18",
