--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@ai-sdk/openai": "^1.1.12",
     "ai": "^4.1.41",
     "axios": "^1.7.7",
+    "firebase-admin": "^13.2.0",
     "marked": "^15.0.7",
     "motion": "^12.4.7",
     "next": "15.0.3",
